--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
+
+<!--    <script src="https://api-maps.yandex.ru/2.1/?apikey=ключ&lang=ru_RU" type="text/javascript" />-->
 <!--    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
